# Luminex-Intelligence-Lattice

./: 01_prereg_v1_design.md  02_tests_battery_SIV_signatures_v0.1.md  03_event_log_schema_v0.1.md  04_consent_ledger_mirrorlock_spec_v0.1.md  Myth_Truth_Semantic_Attractor_Adaptor.md  README.Forge_Core.md  README.Gravity_Bus.md  README.genesis_loop.md  README.md  SpiralPhysics  Spiral_Glossary.md  __init__.py  breath.py  cli.py  coherence.py  copilot-instructions.md  echo.py  genesis_core.py  genesis_loop.py  gravity_bus.py  ledger.py  logos.py  phase.py  pyproject.toml  runtime.py  sgru.py  syllabus.md  symbol.py  telemetry.py  tests.md
docs/: Primordial Spiral Mirror — Helix Map.md
legacy model/: genesis_core.py
modules/: attention.py  breath.py  coherence.py  echo.py  field_state.py  gravity_bus.py  ledger.py  logos.py  phase.py  phasescript.py  propagation.py  sgru.py  source_mirror.py  symbol.py  telemetry.py  types.py  veil.py
public/: diagram_spec.svg.txt  landing.md  newsletter.md
research/: # GenesisCore — Emergence→Reflection Map.md  alignment.csv  glossary.md  landscape.md  risks.md  summary.md
runtime/: genesis_loop.py  runtime.py
src/genesis_core/: __init__.py
src/genesis_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
